
   o edge.Trans
   New argument 'give.rmax' 

   o fvnames, plot.fv
   The symbol '.a' is now recognised. It stands for 'all function values'.

BUG FIXES

   o as.im.owin
   Crashed if X was a 1 x 1 pixel array.
   Fixed.

   o objects of class 'fv'
   Assigning a new value to names(x) or colnames(x) or dimnames(x)
   caused the internal data format to become corrupted.
   Fixed.

	CHANGES IN spatstat VERSION 1.38-1

OVERVIEW

   o We thank Ute Hahn and Xavier Raynaud for contributions.

   o Urgent Bug Fixes.

   o Nickname: 'Le Hardi'

NEW FUNCTIONS

   o "[<-.fv", "$<-.fv"
   Subset replacement methods for 'fv' objects.

SIGNIFICANT USER-VISIBLE CHANGES

   o clarkevans.test
   Simulations are now performed with a fixed number of points.

   o plot.owin, plot.ppp, plot.psp, plot.im
   The default size of the outer margin of white space has been
   reduced. 

   o dclf.test
   Improved information in printed output.

BUG FIXES

   o update.ppm
   Results were incorrect in several cases.
   [Spotted by Xavier Raynaud.]
   Bug introduced in spatstat 1.38-0.
   Fixed.

   o Kinhom, Linhom
   Calculations were incorrect if 'lambda' was a fitted point process model.
   [Spotted by Xavier Raynaud.]
   Bug introduced in spatstat 1.38-0.
   Fixed.

   o envelope.envelope
   Ignored the arguments 'global' and 'VARIANCE'.
   Fixed.

   o fv objects
   If 'f' was an object of class 'fv', then an assignment like f$name <- NULL
   mangled the internal format of the object 'f', leading to errors
   in print.fv and plot.fv.
   [Spotted by Ute Hahn.]
   Fixed.

   o split.ppp
   split(X, A) where A is a rectangular tessellation,
   produced errors if the window of 'A' did not include the window of 'X'.
   [Spotted by Ute Hahn.]
   Fixed.

   o names<-.hyperframe
   Mangled the internal format.
   [Spotted by Ute Hahn.]
   Fixed.
   
   o plot.fv
   y axis label was incorrect in some cases when the 'fv' object
   had only a single column of function values.