@@ -473,6 +473,8 @@ export("coerce.marks.numeric")
 export("col2hex")
 export("collapse.fv")
 export("colourmap")
+export("colouroutputs<-")
+export("colouroutputs")
 export("commasep")
 export("commonGrid")
 export("compareFit")
