@@ -166,4 +166,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2014-05-09" "1.37-0" 781 1841 47 77585 24633
 "2014-08-15" "1.38-0" 803 1963 48 80709 25191
 "2014-08-27" "1.38-1" 803 1965 48 80833 25191
-"2014-09-03" "1.38-2" 806 1974 48 81037 25358
+"2014-09-03" "1.38-2" 806 1976 48 81052 25358
